# voynich

./: .durable-store-trigger  .full-hash-trigger  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GOVERNANCE.md  LICENSE.md  README.md  ROADMAP.md  TIMELINE.md  branch-preservation.md  checkpoint.md  noop.md  noop2.md  preservation.txt  preservation2.txt  pyproject.toml
.github/: pull_request_template.md
assets/: README.md
corpus/: README.md
docs/: project-charter.md  scientific-method.md  terminology.md
experiments/: registry.csv
external-comparisons/: README.md
notebooks/: README.md
notes/: annotation-lifecycle-status.txt
reports/: README.md  annotation-lifecycle.md  observation-work-queue.md  pilot-primary-visual-coding.md  source-audit.md  source-byte-verification.md  source-storage-audit.md
schemas/: annotation-lifecycle-record.schema.json  foldout-complex.schema.json  glyph-instance.schema.json  observation-event.schema.json  observation-freeze-record.schema.json  observation-package.schema.json  observation-work-queue.schema.json  page-manifest.schema.json  pilot-candidate.schema.json  pilot-final-feature.schema.json  pilot-visual-observation.schema.json  region-annotation-trial.schema.json  region-authoring-packet.schema.json
scripts/: acquire_image_bytes.py  acquire_yale.py  build_blank_observation_package.py  build_canonical_page_manifest.py  build_foldout_complexes.py  build_observation_work_queue.py  build_page_manifest.py  build_pilot_candidate_pool.py  build_pilot_independent_review_template.py  (+10 more)
tests/: README.md
(+129 files in other folders)
