[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "voynich-structure"
version = "0.0.1"
description = "Independent observational and spectral analysis toolkit for the Voynich Manuscript"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "scipy>=1.14",
  "pandas>=2.2",
  "networkx>=3.3",
  "pydantic>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5", "mypy>=1.10"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
